refactor: 불필요한 중복 제거